Update _nav Add I18n

--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -1,4 +1,10 @@
 {
   "Create": "ایجاد",
-  "Edit": "ویرایش"
+  "Edit": "ویرایش",
+  "Show": "نمایش",
+  "Hide": "مخفی",
+  "UserName": "نام کاربری",
+  "first_name": "نام",
+  "last_name": "نام خانوادگی",
+  "Users": "کاربران"
 }
