--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,4 +1,10 @@
 {
   "Create": "Create",
-  "Edit": "Edit"
+  "Edit": "Edit",
+  "Show": "Show",
+  "Hide": "Hide",
+  "UserName": "User Name",
+  "first_name": "First Name",
+  "last_name": "Last Name",
+  "Users": "Users"
 }
