--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -1,4 +1,5 @@
 {
+  "lang": "EN",
   "Create": "Create",
   "Edit": "Edit",
   "Show": "Show",
@@ -6,5 +7,14 @@
   "UserName": "User Name",
   "first_name": "First Name",
   "last_name": "Last Name",
-  "Users": "Users"
+  "Users": "Users",
+  "Home": "Home",
+  "NO": "NO",
+  "Yes": "Yes",
+  "Delete": "Delete",
+  "textDelete": "Should {{value}} be Deleted ?",
+  "Date of registration": "Date of Registration",
+  "mobile": "Mobile",
+  "email": "Email",
+  "role": "Role"
 }
