add Validator update Login

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -20,5 +20,6 @@
   "role": "Role",
   "Login": "Login",
   "Sign In to your account": "Sign In To Your Account",
-  "Password": "Password"
+  "Password": "Password",
+  "Please enter the correct amount": "Please Enter The Correct Amount"
 }
