--- a/src/lang/fa.json
+++ b/src/lang/fa.json
@@ -20,5 +20,6 @@
   "role": "نقش",
   "Login": "ورود به سیستم",
   "Sign In to your account": "به حساب خود وارد شوید",
-  "Password": "گذرواژه"
+  "Password": "گذرواژه",
+  "Please enter the correct amount": "لطفا مقدار صحیح را وارد کنید"
 }
